Rapid Prd/src/objects/Site_Survey__c.object
<CustomObject>
    <fields>
        <fullName>Approx_Sq_Ft__c</fullName>
        <label>Approx. Sq. Ft. Interior Space</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0-500</fullName>
                </value>
                <value>
                    <fullName>501 - 1,000</fullName>
                </value>
                <value>
                    <fullName>1,001 - 5,000</fullName>
                </value>
                <value>
                    <fullName>Over 5,000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments_for_NVMS__c</fullName>
        <label>Comments for NVMS</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Declined_Survey_Reason__c</fullName>
        <label>Declined Survey Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Does_the_Business_Appear_to_be_Legimate__c</fullName>
        <label>Does the Business Appear to be Legimate?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exterior_Photos_of_Builiding_Taken__c</fullName>
        <label>Exterior Photos of Building Taken?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_Long_Business_at_Current_Location__c</fullName>
        <label>How Long Business at Current Location?</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Going_out_of_Business_Explain__c</fullName>
        <label>If Going Out of Business, Explain</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_No_Matching_Signs_Explain__c</fullName>
        <label>If No Matching Signs, Explain</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Not_Legimate_Explain__c</fullName>
        <label>If Not Legimate, Explain</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_Not_Open_Explain__c</fullName>
        <label>If Not Open, Explain</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_Not_at_Address_Explain__c</fullName>
        <label>If Not at Address, Explain</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_Yes_for_Sale_Explain__c</fullName>
        <label>If Yes for Sale, Explain</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Indications_Business_Could_be_for_Sale__c</fullName>
        <label>Indications Business Could be for Sale?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Indications_of_Going_Out_of_Business__c</fullName>
        <label>Indications of Going Out of Business?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inspection_Adress_Type__c</fullName>
        <label>Inspection Adress Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Residence</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inspection_Date__c</fullName>
        <label>Inspection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inspection_Time__c</fullName>
        <label>Inspection Time</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interior_Photos_Taken__c</fullName>
        <label>Interior Photos Taken?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Merchant_Currently_Open_for_Business__c</fullName>
        <label>Is Merchant Currently Open for Business?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_the_Business_Located_at_the_Address__c</fullName>
        <label>Located at the Address on the Order?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NVMS_Job_ID__c</fullName>
        <label>NVMS Job ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMS_Message__c</fullName>
        <label>NVMS Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMS_Report__c</fullName>
        <label>NVMS Report</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NVMS_Status__c</fullName>
        <label>NVMS Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Business_Owner__c</fullName>
        <label>Name of Business Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Exterior_Photos_Why__c</fullName>
        <label>No Exterior Photos, Why?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>No_Interior_Photos_Why__c</fullName>
        <label>No Interior Photos, Why?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>No_Photos_of_CC_Machines_Why__c</fullName>
        <label>No Photos of CC Machines, Why?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Site Surveys</relationshipLabel>
        <relationshipName>R00N70000001wK6gEAE</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Order_Category__c</fullName>
        <label>Order Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Automatic</fullName>
                </value>
                <value>
                    <fullName>Risk Department</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Perm_Signs_Match_Name_on_Order__c</fullName>
        <label>Perm. Signs Match Name on Order?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Person_Interviewed__c</fullName>
        <label>Person Interviewed</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo_of_Merchant_s_CC_Machine__c</fullName>
        <label>Photo of Merchant&apos;s CC Machine?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_Contact_Override__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property Contact (Override)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Site Surveys</relationshipLabel>
        <relationshipName>R00N70000001xBE5EAM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Review_Completed__c</fullName>
        <label>Review Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Review_Status__c</fullName>
        <label>Review Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Reviewed - Pass</fullName>
                </value>
                <value>
                    <fullName>Reviewed - Fail</fullName>
                </value>
                <value>
                    <fullName>Reviewed - Fail (New Site Requested)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Site_Survey_Type__c</fullName>
        <label>Site Survey Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Merchant Site 72</fullName>
                </value>
                <value>
                    <fullName>Merchant Term 72</fullName>
                </value>
                <value>
                    <fullName>Mystery Shopper 72</fullName>
                </value>
                <value>
                    <fullName>Merchant Site 48</fullName>
                </value>
                <value>
                    <fullName>Merchant Term 48</fullName>
                </value>
                <value>
                    <fullName>Mystery Shopper 48</fullName>
                </value>
                <value>
                    <fullName>Merchant Site 24</fullName>
                </value>
                <value>
                    <fullName>Merchant Term 24</fullName>
                </value>
                <value>
                    <fullName>Mystery Shopper 24</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AB</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MH</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Survey_Cancel_Request__c</fullName>
        <label>Survey Cancel Request</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Type_of_Business__c</fullName>
        <label>Type of Business</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Underwrinter_Assigned__c</fullName>
        <formula>TEXT(Opportunity__r.Underwriter_Assigned__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Underwrinter Assigned</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Viewed_all_images__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Viewed all images</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Viewing_Status__c</fullName>
        <label>Viewing Status</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ZIP__c</fullName>
        <label>ZIP</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_CC_Terminals_at_Locations__c</fullName>
        <label># of CC Machines at Location</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Employees__c</fullName>
        <label># of Employees</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Site Survey</label>
    <listViews>
        <fullName>CancelledSurveys</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NVMS_Status__c</field>
            <operation>equals</operation>
            <value>Cancelled</value>
        </filters>
        <label>Cancelled Surveys</label>
    </listViews>
    <listViews>
        <fullName>DeliveredSurveys</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Inspection_Date__c</columns>
        <columns>Inspection_Time__c</columns>
        <columns>NVMS_Job_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NVMS_Status__c</field>
            <operation>equals</operation>
            <value>Delivered</value>
        </filters>
        <label>Delivered Surveys</label>
    </listViews>
    <listViews>
        <fullName>DeliveredSurveysManual</fullName>
        <columns>NAME</columns>
        <columns>Comments__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Inspection_Date__c</columns>
        <columns>Inspection_Time__c</columns>
        <columns>NVMS_Job_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NVMS_Status__c</field>
            <operation>equals</operation>
            <value>Delivered</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>MANUAL</value>
        </filters>
        <label>Delivered Surveys - Manual</label>
    </listViews>
    <listViews>
        <fullName>OrderedSurveys</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>NVMS_Status__c</columns>
        <columns>NVMS_Job_ID__c</columns>
        <columns>Underwrinter_Assigned__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NVMS_Status__c</field>
            <operation>equals</operation>
            <value>Ordered</value>
        </filters>
        <label>Ordered Surveys</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>OrderedSurveysManual</fullName>
        <columns>NAME</columns>
        <columns>Comments__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Inspection_Date__c</columns>
        <columns>Inspection_Time__c</columns>
        <columns>NVMS_Job_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NVMS_Status__c</field>
            <operation>equals</operation>
            <value>Ordered</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>MANUAL</value>
        </filters>
        <label>Ordered Surveys - Manual</label>
    </listViews>
    <listViews>
        <fullName>Rejected</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NVMS_Status__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <label>Rejected</label>
    </listViews>
    <listViews>
        <fullName>Underwriting_Queue_Aisha</fullName>
        <booleanFilter>1 AND (2 or 6) AND 3 AND 4 AND 5</booleanFilter>
        <columns>NAME</columns>
        <columns>Declined_Survey_Reason__c</columns>
        <columns>NVMS_Job_ID__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Review_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NVMS_Status__c</field>
            <operation>equals</operation>
            <value>Delivered</value>
        </filters>
        <filters>
            <field>Underwrinter_Assigned__c</field>
            <operation>equals</operation>
            <value>Aisha</value>
        </filters>
        <filters>
            <field>Review_Completed__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Inspection_Date__c</field>
            <operation>greaterThan</operation>
            <value>1/15/2009</value>
        </filters>
        <filters>
            <field>Order_Category__c</field>
            <operation>notEqual</operation>
            <value>Risk Department</value>
        </filters>
        <label>Underwriting Queue - Aisha</label>
    </listViews>
    <listViews>
        <fullName>Underwriting_Queue_Eric</fullName>
        <booleanFilter>1 AND (2 or 6) AND 3 AND 4 AND 5</booleanFilter>
        <columns>NAME</columns>
        <columns>Inspection_Date__c</columns>
        <columns>Declined_Survey_Reason__c</columns>
        <columns>NVMS_Job_ID__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Review_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NVMS_Status__c</field>
            <operation>equals</operation>
            <value>Delivered</value>
        </filters>
        <filters>
            <field>Underwrinter_Assigned__c</field>
            <operation>equals</operation>
            <value>Eric</value>
        </filters>
        <filters>
            <field>Review_Completed__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Inspection_Date__c</field>
            <operation>greaterThan</operation>
            <value>7/18/2011</value>
        </filters>
        <filters>
            <field>Order_Category__c</field>
            <operation>notEqual</operation>
            <value>Risk Department</value>
        </filters>
        <label>Underwriting Queue - Eric</label>
    </listViews>
    <listViews>
        <fullName>Underwriting_Queue_Ericka</fullName>
        <booleanFilter>1 AND (2 or 6) AND 3 AND 4 AND 5</booleanFilter>
        <columns>NAME</columns>
        <columns>Declined_Survey_Reason__c</columns>
        <columns>NVMS_Job_ID__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Review_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NVMS_Status__c</field>
            <operation>equals</operation>
            <value>Delivered</value>
        </filters>
        <filters>
            <field>Underwrinter_Assigned__c</field>
            <operation>equals</operation>
            <value>Ericka</value>
        </filters>
        <filters>
            <field>Review_Completed__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Inspection_Date__c</field>
            <operation>greaterThan</operation>
            <value>1/15/2009</value>
        </filters>
        <filters>
            <field>Order_Category__c</field>
            <operation>notEqual</operation>
            <value>Risk Department</value>
        </filters>
        <label>Underwriting Queue - Ericka</label>
    </listViews>
    <listViews>
        <fullName>Underwriting_Queue_Evan</fullName>
        <booleanFilter>1 AND (2 or 6) AND 3 AND 4 AND 5</booleanFilter>
        <columns>NAME</columns>
        <columns>Inspection_Date__c</columns>
        <columns>Declined_Survey_Reason__c</columns>
        <columns>NVMS_Job_ID__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Review_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NVMS_Status__c</field>
            <operation>equals</operation>
            <value>Delivered</value>
        </filters>
        <filters>
            <field>Underwrinter_Assigned__c</field>
            <operation>equals</operation>
            <value>Evan</value>
        </filters>
        <filters>
            <field>Review_Completed__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Inspection_Date__c</field>
            <operation>greaterThan</operation>
            <value>7/18/2011</value>
        </filters>
        <filters>
            <field>Order_Category__c</field>
            <operation>notEqual</operation>
            <value>Risk Department</value>
        </filters>
        <label>Underwriting Queue - Evan</label>
    </listViews>
    <listViews>
        <fullName>Underwriting_Queue_Greg</fullName>
        <booleanFilter>1 AND (2 or 6) AND 3 AND 4 AND 5</booleanFilter>
        <columns>NAME</columns>
        <columns>Declined_Survey_Reason__c</columns>
        <columns>NVMS_Job_ID__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Review_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NVMS_Status__c</field>
            <operation>equals</operation>
            <value>Delivered</value>
        </filters>
        <filters>
            <field>Underwrinter_Assigned__c</field>
            <operation>equals</operation>
            <value>Greg Dye</value>
        </filters>
        <filters>
            <field>Review_Completed__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Inspection_Date__c</field>
            <operation>greaterThan</operation>
            <value>1/15/2009</value>
        </filters>
        <filters>
            <field>Order_Category__c</field>
            <operation>notEqual</operation>
            <value>Risk Department</value>
        </filters>
        <label>Underwriting Queue - Greg</label>
    </listViews>
    <listViews>
        <fullName>Underwriting_Queue_John</fullName>
        <booleanFilter>1 AND (2 or 6) AND 3 AND 4 AND 5</booleanFilter>
        <columns>NAME</columns>
        <columns>Inspection_Date__c</columns>
        <columns>Declined_Survey_Reason__c</columns>
        <columns>NVMS_Job_ID__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Review_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NVMS_Status__c</field>
            <operation>equals</operation>
            <value>Delivered</value>
        </filters>
        <filters>
            <field>Underwrinter_Assigned__c</field>
            <operation>equals</operation>
            <value>John</value>
        </filters>
        <filters>
            <field>Review_Completed__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Inspection_Date__c</field>
            <operation>greaterThan</operation>
            <value>7/18/2011</value>
        </filters>
        <filters>
            <field>Order_Category__c</field>
            <operation>notEqual</operation>
            <value>Risk Department</value>
        </filters>
        <label>Underwriting Queue - John</label>
    </listViews>
    <listViews>
        <fullName>Underwriting_Queue_Leilani</fullName>
        <booleanFilter>1 AND (2 or 6) AND 3 AND 4 AND 5</booleanFilter>
        <columns>NAME</columns>
        <columns>Inspection_Date__c</columns>
        <columns>Declined_Survey_Reason__c</columns>
        <columns>NVMS_Job_ID__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Review_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NVMS_Status__c</field>
            <operation>equals</operation>
            <value>Delivered</value>
        </filters>
        <filters>
            <field>Underwrinter_Assigned__c</field>
            <operation>equals</operation>
            <value>Leilani</value>
        </filters>
        <filters>
            <field>Review_Completed__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Inspection_Date__c</field>
            <operation>greaterThan</operation>
            <value>7/18/2011</value>
        </filters>
        <filters>
            <field>Order_Category__c</field>
            <operation>notEqual</operation>
            <value>Risk Department</value>
        </filters>
        <label>Underwriting Queue - Leilani</label>
    </listViews>
    <listViews>
        <fullName>Underwriting_Queue_Pamela</fullName>
        <booleanFilter>1 AND (2 or 6) AND 3 AND 4 AND 5</booleanFilter>
        <columns>NAME</columns>
        <columns>Declined_Survey_Reason__c</columns>
        <columns>NVMS_Job_ID__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Review_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NVMS_Status__c</field>
            <operation>equals</operation>
            <value>Delivered</value>
        </filters>
        <filters>
            <field>Underwrinter_Assigned__c</field>
            <operation>equals</operation>
            <value>Pamela</value>
        </filters>
        <filters>
            <field>Review_Completed__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Inspection_Date__c</field>
            <operation>greaterThan</operation>
            <value>1/15/2009</value>
        </filters>
        <filters>
            <field>Order_Category__c</field>
            <operation>notEqual</operation>
            <value>Risk Department</value>
        </filters>
        <label>Underwriting Queue - Pamela</label>
    </listViews>
    <listViews>
        <fullName>Underwriting_Queue_Shapour</fullName>
        <booleanFilter>1 AND (2 or 6) AND 3 AND 4 AND 5</booleanFilter>
        <columns>NAME</columns>
        <columns>Declined_Survey_Reason__c</columns>
        <columns>NVMS_Job_ID__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Review_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NVMS_Status__c</field>
            <operation>equals</operation>
            <value>Delivered</value>
        </filters>
        <filters>
            <field>Underwrinter_Assigned__c</field>
            <operation>equals</operation>
            <value>Shapour</value>
        </filters>
        <filters>
            <field>Review_Completed__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Inspection_Date__c</field>
            <operation>greaterThan</operation>
            <value>1/15/2009</value>
        </filters>
        <filters>
            <field>Order_Category__c</field>
            <operation>notEqual</operation>
            <value>Risk Department</value>
        </filters>
        <label>Underwriting Queue - Shapour</label>
    </listViews>
    <nameField>
        <label>Site Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Site Surveys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Failed_Review_Status_Must_Have_Reason</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Review_Status__c , &quot;Reviewed - Fail&quot;) , Declined_Survey_Reason__c =&quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Declined_Survey_Reason__c</errorDisplayField>
        <errorMessage>If Review Status = &quot;Reviewed - Fail&quot;, you must enter a reason.</errorMessage>
    </validationRules>
</CustomObject>